# Gyronaut

./: .gitignore  CMakeLists.txt  README.md
include/: a_steam.h  astronaut.h  background.h  camera.h  controller.h  game.h  gl.h  gl_utils.h  input.h  inputs.h  meteorite.h  opengl_example.h  render.h
include/c/: c.h  circle.h  core.h
include/cglm/: affine-mat.h  affine.h  applesimd.h  cam.h  euler.h  frustum.h  mat2.h  mat3.h  mat4.h  project.h  quat.h  ray.h  vec3.h
include/cglm/call/: affine.h
include/cglm/simd/avx/: affine.h  mat4.h
include/cglm/simd/sse2/: mat4.h
include/cglm/struct/: affine.h  cam.h  euler.h  frustum.h  mat2.h  mat3.h  mat4.h  project.h  quat.h  vec3.h
include/e/: e.h  gui.h  input.h  window.h
include/mathc/: io.h
include/nuklear/: nuklear_sdl_gles2.h
include/p/: circle.h  core.h
include/r/: basic_rect.h  batch.h  batch_rects.h  common.h  core.h  particle.h  r.h  rect.h  rect_s.h  render.h  single.h  text.h  texture.h
include/render/: basic_rect.h  batch_rects.h  render.h  shader.h  texture.h
include/u/: color.h  pose.h  prandom.h  u.h
include/utilc/: alloc.h  assume.h  cleanup.h  dynarray.h  hashmap.h  strpool.h  strviu.h  strviuparse.h
res/shader/: astronaut.fsh  astronaut.vsh
res/shader/r/: batch.vsh  batch_rects.fsh  batch_rects.vsh  particle.vsh  rect.fsh  rect.vsh  single.vsh
res/shader/render/: basic_rect.fsh  batch_rects.vsh
src/: a_steam.c  astronaut.c  background.c  camera.c  camera_update.c  controller.c  game.c  gl.c  gl_utils.c  input.c  inputs.c  inputs.h  main.c  meteorite.c  opengl_example.c  render.c  render.h
src/c/: circle.c
src/e/: gui.c  input.c  window.c
src/p/: circle.c
src/r/: basic_rect.c  batch.c  batch_rects.c  common.c  particle.c  rect.c  render.c  shader.c  single.c  text.c  texture.c
src/render/: basic_rect.c  batch_rects.c  common.c  shader.c  texture.c
src/u/: color.c
