cmake_minimum_required(VERSION 3.0)
project(Gyronaut C)

set(CMAKE_C_STANDARD 11)

#set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} -march=native)  # march=native for best performance
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wno-long-long -pedantic -Wno-unused-function -Wno-missing-braces")

link_libraries(SDL2)
include_directories(/usr/include/SDL2)

# Set sources
add_executable(gyronaut
        src/main.c
        src/inputs.c
        src/render.c
        )
